--- a/react-app/src/assets/sass/main.sass
+++ b/react-app/src/assets/sass/main.sass
@@ -18,6 +18,9 @@
 @import 'components/card/productCard'
 @import 'components/card/productCardBig'
 
+// Cart components
+@import 'components/cart/smallCart'
+
 // Form components
 @import 'components/form/apiError'
 @import 'components/form/buttonIndicator'
@@ -44,7 +47,7 @@
 
 // Import layout
 // ---------------------------------
-@import 'layout/authForm'
+@import 'layout/sideModal'
 @import 'layout/footer'
 @import 'layout/header'
 @import 'layout/modal'
@@ -54,4 +57,3 @@
 // ---------------------------------
 @import 'pages/home'
 @import 'pages/product'
-
