--- a/react-app/src/assets/sass/abstracts/_variables.sass
+++ b/react-app/src/assets/sass/abstracts/_variables.sass
@@ -7,7 +7,9 @@ $color-white: rgb(255, 255, 255)
 
 $color-grey-light: rgb(227, 231, 232)
 $color-grey-light-2: rgb(205, 207, 208)
+$color-grey-light-3: rgb(162, 165, 166)
 $color-grey-dark: rgb(127, 132, 135)
+$color-grey-dark2: rgb(104, 107, 108)
 
 $color-red: rgb(255, 0, 0)
 $color-yellow: rgb(255, 178, 45)
