--- a/react-app/src/assets/sass/components/_button.sass
+++ b/react-app/src/assets/sass/components/_button.sass
@@ -23,6 +23,27 @@
             background-color: transparent
             color: $color-white
 
+// Button transparent
+// -----------------------------------------
+.btn-transparent
+    width: 100%
+    height: 6rem
+    transition: background-color 0.3s, color 0.3s
+    border: 1px solid $color-primary
+    background-color: transparent
+    color: $color-primary
+    font-size: $default-font-size
+    text-transform: uppercase
+    cursor: pointer
+
+    &:active,
+    &:focus
+        outline: none
+
+    &:hover
+        background-color: $color-primary
+        color: $color-white
+
 // Button as link
 // -----------------------------------------
 .btn-link
