--- a/react-app/src/assets/sass/components/nav/_navIcon.sass
+++ b/react-app/src/assets/sass/components/nav/_navIcon.sass
@@ -3,6 +3,7 @@
         display: flex
         align-items: baseline
         padding: 2rem 1.5rem
+        background-color: transparent
         cursor: pointer
 
         @include respond-to(L)
