--- a/react-app/src/assets/sass/base/_base.sass
+++ b/react-app/src/assets/sass/base/_base.sass
@@ -27,6 +27,9 @@ body
     overflow-y: auto
     background-color: $color-white
 
-.overflow-hidden
-    overflow-y: hidden
+a:link,
+a:visited
+    text-decoration: none
+
+
 
