--- a/react-app/src/assets/sass/base/_typography.sass
+++ b/react-app/src/assets/sass/base/_typography.sass
@@ -27,6 +27,10 @@ button
     @include respond-to(L)
         margin-right: 0
 
+.page-title
+    font-size: 7rem
+    font-weight: 400
+
 .heading-primary
     color: $color-white
     font-size: 18rem
