--- a/react-app/src/assets/sass/components/form/_checkbox.sass
+++ b/react-app/src/assets/sass/components/form/_checkbox.sass
@@ -9,6 +9,7 @@
         transition: color 0.3s
         color: $color-grey-dark
         font-size: $default-font-size
+        font-weight: 400
         cursor: pointer
 
     &__btn
