--- a/react-app/src/assets/sass/main.sass
+++ b/react-app/src/assets/sass/main.sass
@@ -55,5 +55,7 @@
 
 // Import pages
 // ---------------------------------
+@import 'pages/checkout'
 @import 'pages/home'
 @import 'pages/product'
+
