--- a/react-app/src/assets/sass/base/_animations.sass
+++ b/react-app/src/assets/sass/base/_animations.sass
@@ -112,3 +112,28 @@
 
     to
         transform: rotate(360deg)
+
+// Accordion
+.showAccordion
+    animation: showAccordion 0.3s
+    animation-fill-mode: forwards
+
+@keyframes showAccordion
+    0%
+        height: 0
+
+    100%
+        height: auto
+        margin-top: 2rem
+
+.hideAccordion
+    animation: hideAccordion 0.3s
+    animation-fill-mode: forwards
+
+@keyframes hideAccordion
+    0%
+        height: auto
+        margin-top: 2rem
+
+    100%
+        height: 0
