--- a/react-app/src/assets/sass/components/cart/_smallCart.sass
+++ b/react-app/src/assets/sass/components/cart/_smallCart.sass
@@ -7,6 +7,13 @@
     &__item
         display: flex
 
+    &__divider
+        display: block
+        width: 100%
+        margin: 3.5rem 0 1.5rem
+        border: none
+        border-bottom: $line
+
     &__img
         display: block
         width: 12rem
@@ -92,13 +99,15 @@
         display: flex
         justify-content: space-between
         width: 100%
-        margin-top: 4rem
-        margin-bottom: 1rem
+        margin-bottom: 1.5rem
         font-size: $default-font-size
         font-weight: 400
 
     & .btn-submit
         margin-bottom: 4rem
+
+        @include respond-to(S)
+            margin-bottom: 2.5rem
 
     // Empty cart
     &__empty
