--- a/react-app/src/assets/sass/components/form/_input.sass
+++ b/react-app/src/assets/sass/components/form/_input.sass
@@ -1,3 +1,4 @@
+// Input with placeholder on top
 .input
     width: 100%
     padding: 1.4rem 0
@@ -10,7 +11,7 @@
 
     &:-webkit-autofill,
     &:-webkit-autofill:hover,
-    &:-webkit-autofill:focus,
+    &:-webkit-autofill:focus
         transition: background-color 5000s ease-in-out 0s
 
     &:hover,
@@ -21,8 +22,8 @@
         outline: none
 
     &:invalid
-        box-shadow: none
         border-bottom-color: $color-red
+        box-shadow: none
 
     &__label
         display: inline-block
@@ -44,8 +45,8 @@
         font-size: $default-font-size
 
         &::before
-            display: inline
             content: '⚠ '
+            display: inline
 
     // Move placeholder up while input is focus
     &:focus + &__placeholder,
@@ -53,3 +54,38 @@
         transform: translateY(-2.5rem)
         color: $color-grey-dark
         font-size: 1.3rem
+
+// Basic input
+.basic-input
+    width: 100%
+    padding: 1.4rem 0
+    transition: border-bottom-color 0.4s
+    border: none
+    border-bottom: 2px solid $color-grey-light
+    background-color: $color-white
+    font-family: 'Lato', sans-serif
+    font-size: $default-font-size
+    filter: none
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus
+        transition: background-color 5000s ease-in-out 0s
+
+    &:hover
+        border-bottom-color: $color-primary
+
+    &:invalid
+        border-bottom-color: $color-red
+        box-shadow: none
+
+    &--required
+        border-bottom: 2px solid $color-red
+        box-shadow: none
+
+    &:focus
+        outline: none
+
+    &__label
+        font-size: 1.6rem
+        font-weight: 700
