--- a/react-app/src/assets/sass/pages/_product.sass
+++ b/react-app/src/assets/sass/pages/_product.sass
@@ -146,6 +146,7 @@
         position: relative
         width: 2.5rem
         height: 2.5rem
+        border: 1px solid $color-primary
 
         &::after
             content: ''
