--- a/react-app/src/assets/sass/layout/_sideDrawer.sass
+++ b/react-app/src/assets/sass/layout/_sideDrawer.sass
@@ -6,7 +6,8 @@
     justify-items: start
     width: 40rem
     height: 100%
-    padding: 0 1rem
+    padding-right: 1rem
+    padding-left: 0.5rem
     overflow-x: hidden
     overflow-y: scroll
     background-color: $color-white
